# guacamole-server

./: .gitignore  Dockerfile  Makefile.am  README  README.md  configure.ac
src/common/: Makefile.am  guac_clipboard.c  guac_cursor.c  guac_cursor.h  guac_display.c  guac_display.h  guac_dot_cursor.c  guac_pointer_cursor.c  guac_pointer_cursor.h  guac_rect.c  guac_rect.h  guac_surface.c  guac_surface.h  guac_surface_smoothness.h
src/common-ssh/: Makefile.am  guac_sftp.c  guac_sftp.h  guac_ssh.c  guac_ssh.h  key.c  sftp.c  ssh.c
src/guacd/: .gitignore  Makefile.am  client-map.c  client-map.h  client.c  client.h  conf-args.c  conf-file.c  conf-file.h  conf-parse.c  connection.c  connection.h  daemon.c  log.h  move-fd.c  proc.c  proc.h  socket-ssl.c  socket-ssl.h  user.c  user.h
src/guacd/man/: guacd.8.in  guacd.conf.5.in
src/guacd/systemd/: guacd.service.in
src/libguac/: Makefile.am  client.c  id.c  parser.c  plugin.c  protocol.c  socket-fd.c  socket.c  user-handlers.c  user-handlers.h  user.c
src/libguac/guacamole/: client-constants.h  client-fntypes.h  client.h  parser-constants.h  parser.h  plugin.h  socket.h  string.h  user-constants.h  user-fntypes.h  user-types.h  user.h
src/libguac/tests/: Makefile.am
src/libguacd/: socket-ssl.c
src/protocols/rdp/: Makefile.am  client.c  client.h  error.c  fs.h  input.c  input.h  keyboard.c  rdp.c  rdp.h  rdp_bitmap.c  rdp_bitmap.h  rdp_cliprdr.c  rdp_color.c  rdp_disp.c  rdp_fs.c  rdp_fs.h  rdp_gdi.c  rdp_pointer.c  rdp_pointer.h  rdp_rail.c  rdp_settings.c  rdp_settings.h  rdp_stream.c  rdp_stream.h  settings.c  settings.h  sftp.c  user.c  user.h
src/protocols/rdp/channels/: cliprdr.c
src/protocols/rdp/keymaps/: de_ch_qwertz.keymap
src/protocols/ssh/: Makefile.am  client.c  client.h  clipboard.c  settings.c  settings.h  sftp.c  sftp.h  ssh.c  ssh.h  ssh_client.c  user.c  user.h
src/protocols/telnet/: client.c  settings.c  settings.h  telnet.c  telnet.h  user.c
src/protocols/vnc/: Makefile.am  auth.c  client.c  client.h  clipboard.c  clipboard.h  cursor.c  display.c  guac_handlers.c  input.c  settings.c  settings.h  sftp.c  user.c  vnc.c  vnc.h
src/terminal/: Makefile.am  display.c  terminal.c  terminal.h  terminal_handlers.c
src/terminal/terminal/: display.h  terminal.h
tests/common/: guac_rect.c
tests/protocol/: instruction_parse.c  instruction_read.c
